# troapis

./: .gitignore  README.md  model_entrypoint.py  pyproject.toml
entrypoints/: gemma2.py  paligemma.py
src/troapis/: __init__.py  app.py  constants.py  datatypes.py  dev.py  log.py  model_tools.py  routes.py  utils.py
tests/: test_datatypes.py  test_generate.py  test_routes.py
