[project]
    name = "troapis"
    version = "0.0.0"
    description = "transformers models behind openai api for things like agentbench"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    dependencies = ["fastapi>=0.111.0"]
    requires-python = ">=3.11"
    readme = "README.md"
    license = { text = "nona" }

    [project.scripts]
        tapis = "pdm run "

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"

[tool.pdm]
    distribution = true

    [tool.pdm.scripts]
        dev = "fastapi dev src/troapis/dev.py"

[tool.ruff]
    line-length = 120
